--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
-    "name": "lanselot/parallax",
+    "name": "lanselot/yii2-parallax-widget",
     "description": "Wrapper for Yii2 from parallax.js by http://pixelcog.github.io",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","widget"],
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Alexandr Eremin",
