--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "yii2-extension",
     "keywords": ["yii2","extension","widget"],
     "license": "MIT",
-    "minimum-stability": "dev",
+    "version": "0.0.1",
     "authors": [
         {
             "name": "Alexandr Eremin",
